--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "issues": "https://github.com/johnitvn/yii2-user-plus/issues?state=open",
         "source": "https://github.com/johnitvn/yii2-user-plus"
     },
+    "suggest": {
+        "johnitvn/yii2-rbac-plus": "Database role base access control manager for yii2"
+    },
     "minimum-stability": "dev",
     "require": {
         "yiisoft/yii2": ">=2.0.4",
